可视化编辑器默认样式同步

--- a/css/forum/forum.less
+++ b/css/forum/forum.less
@@ -22,6 +22,7 @@
 @import url('viewthread/c-fli-attachment.less');	
 @import url('viewthread/c-fli-rate.less');	
 @import url('viewthread/c-fli-cmt.less');	
+@import url('viewthread/c-fli-vote.less');	
 
 @import url('post/c-post.less');
 @import url('post/c-post-header.less');
