--- a/css/forum/post/c-post-extra.less
+++ b/css/forum/post/c-post-extra.less
@@ -93,3 +93,22 @@
 		font-size:12px;
 	}
 }
+
+//投票类
+.c-post-extra{
+	.exfm{
+		background-color:#f7f7f7;
+		padding:10px;
+		.r(4px);
+		margin-bottom:10px;
+		.u-text,.px{
+			padding:0 5px;
+		}
+	}
+	.sppoll #pollm_c_1 p{margin-bottom:5px;}
+	.sadd{.fr;padding-top:10px;}
+}
+.ua-responsive .screen-s .c-post-extra{
+	.sppoll{float:none;}
+	.sadd{float:none;padding-top:10px;}
+}
