门户管理 & 门户修订

--- a/css/forum/post/c-post-body.less
+++ b/css/forum/post/c-post-body.less
@@ -32,6 +32,10 @@ body .edt{
 		.h(auto);
 	}
 	#e_page,#e_index{.none;}
+
+	.u-editor-custom{
+		.w(auto);.h(auto);
+	}
 }
 
 //弹层位置
@@ -74,3 +78,6 @@ body .edt{
 .ua-responsive .screen-s .edt .bar{
 	.none;
 }
+
+
+#e_cst1_macro img{.y(top);/*margin-top:2px;*/}
