--- a/css/global.less
+++ b/css/global.less
@@ -64,10 +64,10 @@
 @import url('tobe/discuz/discuz-content.less');		//帖子内容
 
 /*@import url('tobe/discuz/discuz-primary.less');		//分类信息*/
-@import url('tobe/discuz/discuz-post.less');			//发布页
-@import url('tobe/discuz/discuz-editor.less');		//编辑器
+/*@import url('tobe/discuz/discuz-post.less');			//发布页*/
+/*@import url('tobe/discuz/discuz-editor.less');		//编辑器*/
 @import url('tobe/discuz/discuz-extend.less');		//扩展条
-@import url('tobe/discuz/discuz-admin.less');		//门户管理
+/*@import url('tobe/discuz/discuz-admin.less');		//门户管理*/
 /*@import url('tobe/discuz/discuz-rate.less');			//评分窗口*/
 
 
