--- a/css/ui/select.less
+++ b/css/ui/select.less
@@ -14,9 +14,21 @@
 .alertHTML .sltm{
 	margin-top:-30px;
 }
-
 .ua-responsive .screen-s .sltm{
 	.w(80%) !important;
+}
+
+.dpbtn{
+	.lh(26px);
+	border:1px solid #ddd;
+	border-left:none;
+	box-shadow: 0 0 1px #ddd inset;
+	.r(2px);
+	background:url('@{url}forum/select.png') no-repeat center 4px;
+
+	&:hover,&:focus{
+		background-position:center -36px;
+	}
 }
 
 //原生select
