--- a/css/ui/ui.less
+++ b/css/ui/ui.less
@@ -8,3 +8,8 @@
 @import url('mask.less');			//遮罩层
 @import url('tips.less');			//提示文字样式
 @import url('warning.less');		//警告
+
+
+.alertHTML .p_pop{
+	margin-top:-30px;
+}
