--- a/template/default/portal/portalcp/portalcp_related_article.htm
+++ b/template/default/portal/portalcp/portalcp_related_article.htm
@@ -1,4 +1,5 @@
 <!--{template common/header}-->
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/admin.css" type="text/css" />
 <!--{if ($op == 'manual')}-->
 	<!--{if $ra}-->
 		<li id="$ra[aid]">
