--- a/template/default/forum/post_editor_body.htm
+++ b/template/default/forum/post_editor_body.htm
@@ -89,7 +89,7 @@
 					<a id="{$editorid}_password" adv="1" title="{lang replypassword}">Password</a>
 					<a id="{$editorid}_postbg" adv="1" title="{lang replybackground}">Background</a>
 					<!--{loop $_G['cache']['bbcodes_display'][$_G['groupid']] $tag $bbcode}-->
-						<a id="{$editorid}_cst{$bbcode[params]}_$tag" class="cst" title="$bbcode[explanation]"><img src="{STATICURL}image/common/$bbcode[icon]" title="$bbcode[explanation]" alt="$tag" /></a>
+						<a id="{$editorid}_cst{$bbcode[params]}_$tag" class="cst u-editor-custom" title="$bbcode[explanation]"><img src="{STATICURL}image/common/$bbcode[icon]" title="$bbcode[explanation]" alt="$tag" /></a>
 					<!--{/loop}-->
 					<!--{hook/post_editorctrl_bottom}-->
 				</div>
