--- a/template/default/portal/portalcp/portalcp_article.htm
+++ b/template/default/portal/portalcp/portalcp_article.htm
@@ -1,5 +1,6 @@
 <!--{template common/header}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/portal/push.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/admin.css" type="text/css" />
 
 <!--{if $op == 'delete'}-->
 
