--- a/template/default/portal/portalcp/portalcp_comment.htm
+++ b/template/default/portal/portalcp/portalcp_comment.htm
@@ -1,5 +1,5 @@
 <!--{template common/header}-->
-
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/admin.css" type="text/css" />
 <!--{if $_GET['op'] == 'requote'}-->
 	[quote]{$comment[username]}: {$comment[message]}[/quote]
 
