--- a/template/default/portal/portalcp/portalcp_diy.htm
+++ b/template/default/portal/portalcp/portalcp_diy.htm
@@ -1,4 +1,5 @@
 <!--{template common/header}-->
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/admin.css" type="text/css" />
 <!--{if $op=='blockclass'}-->
 	<div class="tbmu mbm" id="contentblockclass_nav" style="margin-top: -15px">
 		<!--{eval $isfirst=1;}-->
