--- a/template/default/portal/portalcp/portalcp_login.htm
+++ b/template/default/portal/portalcp/portalcp_login.htm
@@ -1,5 +1,5 @@
 <!--{template common/header}-->
-
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/admin.css" type="text/css" />
 <style type="text/css">
 .parentcat {}
 .cat { margin-left: 20px; }
