--- a/template/default/portal/portalcp/portalcp_plugin.htm
+++ b/template/default/portal/portalcp/portalcp_plugin.htm
@@ -1,4 +1,5 @@
 <!--{template common/header}-->
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/admin.css" type="text/css" />
 <div id="pt" class="bm cl">
 	<div class="z">
 		<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
