--- a/template/default/portal/portalcp/portalcp_portalblock.htm
+++ b/template/default/portal/portalcp/portalcp_portalblock.htm
@@ -1,5 +1,6 @@
 <!--{template common/header}-->
 <!--{if !$_G[inajax]}-->
+<link rel="stylesheet" href="http://css.jx3pve.com/css/portal/admin.css" type="text/css" />
 <div id="pt" class="bm cl">
 	<div class="z">
 		<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
