未登录时不显示道具

--- a/template/default/component/c_fli_panel.htm
+++ b/template/default/component/c_fli_panel.htm
@@ -81,9 +81,8 @@
 				<!--{/if}-->
 
 				<!-- 道具 -->
-				<!--{if $_G['setting']['magicstatus']}-->
+				<!--{if $_G[uid] && $_G['setting']['magicstatus']}-->
 					<a class="u-magic u-submod" href="javascript:;"><i></i>道具</a>
-					<!--id="mgc_post_$post[pid]" onmouseover="showMenu(this.id)" -->
 				<!--{/if}-->
 
 				<!-- 主贴管理 -->
