--- a/template/default/forum/post_bak.htm
+++ b/template/default/forum/post_bak.htm
@@ -1,8 +1,8 @@
 <!--{template common/header_m}-->
+<!--新改造的-->
+
 <!--{subtemplate forum/post_header}-->
 <!--{subtemplate forum/custom_header}-->
-
-<!--修正闭合问题名称，已恢复头部的route判断-->
 <script type="text/javascript">
 	var allowpostattach = parseInt('{$_G['group']['allowpostattach']}');
 	var allowpostimg = parseInt('$allowpostimg');
