旧模板兼容，启用list局部模块

--- a/css/forum/forumdisplay/c-flist-item.less
+++ b/css/forum/forumdisplay/c-flist-item.less
@@ -25,12 +25,11 @@
 		border-radius: 2px;
 		background-color:@bluex;
 		
-		&.fail{background-color:#ABA7A5;}
-		&.old{background-color:#F2BF3A;}
-		&.new{background-color:#28B3C5;}
-		&.fresh{background-color:#6DC528;}//#DBAFF9
-		&.ok{background-color:#f00;}
-	}
+		&.fail{background-color:#aaa;color:#fff;}
+		&.old{background-color:#FFF7DC;color: #EA8202;}
+		&.new{background-color:#DDFBFF;color:#28B3C5;}
+		&.fresh{background-color:#E6F9D8;color: #20961E;}//#DBAFF9
+		&.ok{background-color: #FFF5F5;color: #F93434;}}
 
 	//标题
 	.u-title{.fl;}
