--- a/css/widget/w-listfilter.less
+++ b/css/widget/w-listfilter.less
@@ -27,8 +27,8 @@
 		.db;.fl;
 		padding:0 8px;margin-right:5px;
 		color:#555;
-		border-left:1px solid transparent;
-		border-right:1px solid transparent;
+		//border-left:1px solid transparent;
+		//border-right:1px solid transparent;
 		transition:background-color 0.1s ease-in-out;
 	}
 	.u-item:hover{
@@ -39,8 +39,8 @@
 	.on{
 		background-color:#f2f2f2;
 		color:#333;
-		border-left:1px solid #ddd;
-		border-right:1px solid #ddd;
+		//border-left:1px solid #ddd;
+		//border-right:1px solid #ddd;
 		font-weight:normal;
 	}
 
