--- a/template/macro/forum/forumdisplay.htm
+++ b/template/macro/forum/forumdisplay.htm
@@ -371,13 +371,16 @@
 				<!--{/if}-->
 
 				<!-- dz:pages-top -->
-				<!--{subtemplate jx3pve/w_pages_top}-->
+				<!--{subtemplate widget/w_pages_top_list}-->
 
-				<!-- jx3pve:w-category-nav -->
-				<!--{subtemplate jx3pve/w_category_nav}-->
+				<!-- jx3pve:w-category -->
+				<!--{subtemplate widget/w_category}-->
 
 				<!-- jx3pve:w-order -->
-				<!--{subtemplate jx3pve/w_order}-->
+				<!--{subtemplate widget/w_order}-->
+
+				<!-- jx3pve:w-filter -->
+				<!--{subtemplate widget/w_filter}-->
 
 				<!-- dz:list loop -->
 				<!--{if empty($_G['forum']['sortmode'])}-->
