--- a/template/team/forum/forumdisplay.htm
+++ b/template/team/forum/forumdisplay.htm
@@ -361,23 +361,17 @@
 					</script>
 				<!--{/if}-->
 
-				<!-- jx3pve:w-pages-top -->
-				<div id="pgt" class="w-pages w-pages-top bm bw0 pgs cl">
-					<span id="fd_page_top">$multipage</span>
-					<span class="pgb y" {if $_G[setting][visitedforums]}id="visitedforums" onmouseover="$('visitedforums').id = 'visitedforumstmp';this.id = 'visitedforums';showMenu({'ctrlid':this.id,'pos':'34'})"{/if} ><a href="forum.php">{lang return_index}</a></span>
-					<!--{if !$_GET['archiveid']}-->
-					<a class="u-btn-publish" href="javascript:;" id="newspecial" onmouseover="$('newspecial').id = 'newspecialtmp';this.id = 'newspecial';showMenu({'ctrlid':this.id})"{if !$_G['forum']['allowspecialonly'] && empty($_G['forum']['picstyle']) && !$_G['forum']['threadsorts']['required']} onclick="showWindow('newthread', 'forum.php?mod=post&action=newthread&fid=$_G[fid]')"{else} onclick="location.href='forum.php?mod=post&action=newthread&fid=$_G[fid]';return false;"{/if} title="{lang send_posts}">
-						<span>发布信息</span>
-						<img src="{IMGDIR}/pn_post.png" alt="{lang send_posts}" />
-					</a><!--{/if}-->
-					<!--{hook/forumdisplay_postbutton_top}-->
-				</div>
+				<!-- dz:pages-top -->
+				<!--{subtemplate widget/w_pages_top_list}-->
 
-				<!-- jx3pve:w-category-nav -->
-				<!--{subtemplate jx3pve/w_category_nav}-->
+				<!-- jx3pve:w-category -->
+				<!--{subtemplate widget/w_category}-->
 
 				<!-- jx3pve:w-order -->
-				<!--{subtemplate jx3pve/w_order}-->
+				<!--{subtemplate widget/w_order}-->
+
+				<!-- jx3pve:w-filter -->
+				<!--{subtemplate widget/w_filter}-->
 
 				<!-- dz:list loop -->
 				<!--{if empty($_G['forum']['sortmode'])}-->
