--- a/template/tool/forum/forumdisplay.htm
+++ b/template/tool/forum/forumdisplay.htm
@@ -371,26 +371,16 @@
 				<!--{/if}-->
 
 				<!-- dz:pages-top -->
-				<div id="pgt" class="w-pages w-pages-top bm bw0 pgs cl">
-					<span id="fd_page_top">$multipage</span>
-					<span class="pgb y" {if $_G[setting][visitedforums]}id="visitedforums" onmouseover="$('visitedforums').id = 'visitedforumstmp';this.id = 'visitedforums';showMenu({'ctrlid':this.id,'pos':'34'})"{/if} ><a href="forum.php">{lang return_index}</a></span>
-					<!--{if !$_GET['archiveid']}-->
-					<a class="u-btn-publish" href="http://www.jx3pve.com/forum.php?mod=post&action=newthread&sortid=5&fid=321" id="newspecial">
-						<span>发布作品</span>
-						<img src="{IMGDIR}/pn_post.png" alt="{lang send_posts}" />
-					</a><!--{/if}-->
-					<a class="u-btn-ask" href="http://www.jx3pve.com/forum.php?mod=post&action=newthread&fid=2&extra=" target="_blank">交流讨论</a>
-					<!--{hook/forumdisplay_postbutton_top}-->
-				</div>
+				<!--{subtemplate widget/w_pages_top_list}-->
 
-				<!-- jx3pve:w-category-nav -->
-				<!--{subtemplate jx3pve/w_category_nav}-->
-				
+				<!-- jx3pve:w-category -->
+				<!--{subtemplate widget/w_category}-->
+
 				<!-- jx3pve:w-order -->
-				<!--{subtemplate jx3pve/w_order}-->
+				<!--{subtemplate widget/w_order}-->
 
 				<!-- jx3pve:w-filter -->
-				<!--{subtemplate jx3pve/w_filter}-->
+				<!--{subtemplate widget/w_filter}-->
 				
 				<!-- dz:list loop -->
 				<!--{if empty($_G['forum']['sortmode'])}-->
