--- a/css/common/i-footer/all.less
+++ b/css/common/i-footer/all.less
@@ -4,6 +4,7 @@
 	.h(@c-footer-height);
 	border-top:1px solid #ddd;
 	overflow:hidden;
+	box-shadow:0 -2px 2px #eee;
 
 	ul{
 		padding-top:4px;
@@ -57,6 +58,7 @@
 		&.on i{background-image:url('@{url}footer/os2.svg');}
 	}
 }
+.pg_viewthread .i-footer{box-shadow:none;}
 #index-page .i-footer .u-index,
 .i-footer .on span{
 	color:@blue-dark;
