--- a/css/forum/viewthread/c-fli-commend.less
+++ b/css/forum/viewthread/c-fli-commend.less
@@ -11,8 +11,8 @@
 		.clip;
 
 		i{.dbi;.y;.size(16px);margin-right:5px;}
-		.color(@zhblue,@zhblue);
-		border:1px solid @zhblue;
+		//.color(@zhblue,@zhblue);
+		//border:1px solid @zhblue;
 
 		&:hover{
 			i{
@@ -22,16 +22,16 @@
 	}
 
 	.u-top{
-		i{background:url('@{url}forum/top.png') no-repeat 0 0;margin-top:-1px;}
+		i{background:url('@{url}forum/stick2.png') no-repeat 0 0;margin-top:-1px;}
 	}
 	.u-color{
 		i{background:url('@{url}forum/color.png') no-repeat 0 0;margin-top:-1px;}
 	}
 	.u-zan{
-		i{background:url('@{url}forum/heart.png') no-repeat 0 0;margin-top:-2px;}
+		i{background:url('@{url}forum/zan.png') no-repeat 0 0;margin-top:-2px;}
 	}
 	.u-rate{
-		i{background:url('@{url}forum/rate.png') no-repeat 0 0;margin-top:-3px;}
+		i{background:url('@{url}forum/fav2.png') no-repeat 0 0;margin-top:-3px;}
 	}
 }
 .ua-responsive .screen-s .c-fli-commend{
