--- a/css/forum/viewthread/c-fli-footer.less
+++ b/css/forum/viewthread/c-fli-footer.less
@@ -8,6 +8,7 @@
 .c-fli-magic{
 	.pa;
 	.rt(0,100%);.z(20);
+	margin-top:0 !important;//不应该受 alertHTML影响
 }
 .ua-responsive .screen-s .c-fli-magic{
 	.pf;.lt(0,0);.z(41);
