--- a/css/widget/w-pages.less
+++ b/css/widget/w-pages.less
@@ -51,22 +51,17 @@
 	padding-bottom:0  !important;
 	border-bottom:none !important;
 }
+.viewpage-container .w-pages-top{.none;}
+.ua-responsive .screen-s .w-pages-top{.none;}
+
 
 //底部翻页
 .w-pages-bottom{
 }
-
-//手机端
 .ua-responsive .screen-s{
-
 	.w-pages-bottom .u-btn-publish{
 		.w(100%);
 		margin-bottom:10px;
 		.none;
 	}
-
-	.w-pages-top{
-		.none !important;
-	}
-
 } 
