--- a/css/forum/forumdisplay/u_addef.less
+++ b/css/forum/forumdisplay/u_addef.less
@@ -1,9 +1,13 @@
 .u-addef{
 	.fl;
-	.new{
-		  background: #f00;
-		  color: #fff;
-		  border-radius: 2px;
-		  padding: 0 3px;
-	}
+	margin-left:5px;
+	img{margin-top:-2px;}
+	i{.db;.fl;margin-right:3px;}
 }
+
+.u-addef-lock{.size(20px);margin-top: 1px;background:url('@{url}forum/lock.gif') no-repeat 0 0;}
+.u-addef-vote{.size(16px);margin-top: 4px;background:url('@{url}forum/vote.gif') no-repeat 0 0;}
+.u-addef-reward{.size(16px);margin-top:4px;background:url('@{url}forum/reward.gif') no-repeat 0 0;}
+.u-addef-stick{.size(16px);margin-top:6px;background:url('@{url}forum/stick2.png') no-repeat 0 0;}
+
+.u-addef-readperm{.color(@yel);.normal;}
