--- a/css/forum/viewthread/c-fli-content.less
+++ b/css/forum/viewthread/c-fli-content.less
@@ -11,7 +11,7 @@
 	margin-left: 30px;
 }
 
-.ua-responsive .screen-s .c-fli-content{
+.ua-responsive .screen-s .c-fli .c-fli-content{
 	margin-left: 30px;
 }
 
