--- a/template/default/common/wysiwyg.less
+++ b/template/default/common/wysiwyg.less
@@ -9,7 +9,7 @@ body{background:#fff;min-height:400px;}
 a{text-decoration:none;}
 a:hover{text-decoration:underline;}
 
-strong{.bold;}
+strong,b{.bold;}
 i{.italic;}
 u{text-decoration:underline;}
 
