图标间距，日期高亮组件优化

--- a/css/forum/forumdisplay/c-flist-item.less
+++ b/css/forum/forumdisplay/c-flist-item.less
@@ -20,10 +20,9 @@
 		.fl;
 		.fz(12px,20px);
 		margin:3px 10px 3px 3px;
-		color: #fff;
 		padding: 0 5px;
 		border-radius: 2px;
-		background-color:@bluex;
+		background-color:#DDFBFF;color:#28B3C5;
 		
 		&.fail{background-color:#aaa;color:#fff;}
 		&.old{background-color:#FFF7DC;color: #EA8202;}
