--- a/template/default/forum/列表页/forumdisplay_list.htm
+++ b/template/default/forum/列表页/forumdisplay_list.htm
@@ -322,3 +322,5 @@
 
 <!-- dz:w-pages-bottom -->
 <!--{subtemplate widget/w_pages_bottom_list}-->
+
+<script src="http://js.jx3pve.com/js/widget/postdate.min.js"></script>
