--- a/css/forum/forumdisplay/u_addef.less
+++ b/css/forum/forumdisplay/u_addef.less
@@ -1,8 +1,8 @@
 .u-addef{
 	.fl;
 	margin-left:5px;
-	img{margin-top:-2px;}
-	i{.db;.fl;margin-right:3px;}
+	img,i{.db;.fl;margin-right:3px;}
+	img{margin-top:5px;}
 }
 
 .u-addef-lock{.size(20px);margin-top: 1px;background:url('@{url}forum/lock.gif') no-repeat 0 0;}
