发布页与单页Bug修复

--- a/css/ui/ui.less
+++ b/css/ui/ui.less
@@ -8,6 +8,7 @@
 @import url('mask.less');			//遮罩层
 @import url('tips.less');			//提示文字样式
 @import url('warning.less');		//警告
+@import url('img.less');			//图片
 
 
 .alertHTML .p_pop{
