--- a/css/global.less
+++ b/css/global.less
@@ -200,18 +200,18 @@
 
 /*bbs 默认论坛模板
 ------------------------------------------*/
-@import url('tobe/bbs/discuz.less');					//论坛导航
-@import url('tobe/bbs/bbs-layout.less');				//论坛样式
+/*@import url('tobe/bbs/discuz.less');					//论坛导航*/
+/*@import url('tobe/bbs/bbs-layout.less');				//论坛样式
 @import url('tobe/bbs/bbs-sidebar.less');			//论坛样式
 @import url('tobe/bbs/bbs-list.less');				//论坛样式
 @import url('tobe/bbs/bbs-post.less');				//论坛样式
-@import url('tobe/bbs/bbs-view.less');				//论坛样式
-@import url('tobe/mix/mix-sidebar.less');			//论坛样式
+@import url('tobe/bbs/bbs-view.less');				//论坛样式*/
+/*@import url('tobe/mix/mix-sidebar.less');			//论坛样式
 @import url('tobe/mix/mix-list.less');				//论坛样式
 @import url('tobe/mix/mix-post.less');				//论坛样式
 @import url('tobe/mix/mix-view.less');				//论坛样式
-@import url('tobe/mix/mix.less');					//论坛样式
-@import url('tobe/plugin/treeview.less');			//树形菜单
+@import url('tobe/mix/mix.less');					//论坛样式*/
+/*@import url('tobe/plugin/treeview.less');			//树形菜单*/
 
 /*raid 团队
 ------------------------------------------*/
