--- a/css/widget/w-order.less
+++ b/css/widget/w-order.less
@@ -6,14 +6,15 @@
 	}
 
 	#atarget{
+		.pointer;
 		.fr;margin-top:3px;margin-left:10px;
 		padding: 3px 10px;
-		background-color: @basecolor;
 		color: #fff;
 		border-radius: 4px;
 		text-indent: 17px;
-		background-position:9px 6px;
 		user-select:none;
+		.lh(16px);
+		background:url('@{urls}common/atarget.png') @basecolor no-repeat 9px 6px;
 	}
 
 	#atarget.atarget_1, .chked {
