发布页样式修订

--- a/css/forum/post/c-post-attribute.less
+++ b/css/forum/post/c-post-attribute.less
@@ -246,6 +246,14 @@
 		width: 100%;
     	box-sizing: border-box;
 	}
+	.u-item-justforauthor{
+		i{.none;}
+		label{text-decoration:none;}
+		label:after{.none;}
+	}
+	.m-editor-activity{
+		.none;
+	}
 }
 
 
