--- a/css/forum/post/c-post-extra.less
+++ b/css/forum/post/c-post-extra.less
@@ -11,6 +11,22 @@
 }
 .c-post-category{
 	.pa;.lt(0,0);
+	.size(103px,28px);
+	
+	.c-post-category-bg{
+		.pa;.lt(0,0);.z(1);
+		.db;.full;.x;    
+		background-color: #f9f9f9;
+    	color: #555;
+    	border-radius: 2px;
+    	cursor:default;
+    }
+	.c-post-category-ct{
+		.pa;.lt(0,0);.z(2);
+		.db;.full;.x;    
+		background-color:#fff;
+	}
+
 }
 .c-post-subject{
 	.clearfix;
@@ -67,7 +83,8 @@
 
 .ua-responsive .screen-s .c-post-title{
 	.c-post-category{
-		.ps;float:none;
+		.pr;float:none;
+		.full(x);
 		margin-right:0;
 		margin-bottom:10px;
 		a{.w(auto) !important;}
@@ -76,7 +93,6 @@
 	.c-post-subject .u-subject{
 		margin:0 ;
 		margin-bottom:5px;
-		font-size:1.2rem;
 	}
 
 	.u-check{
