--- a/css/ui/button.less
+++ b/css/ui/button.less
@@ -29,7 +29,7 @@
     box-shadow: 0 1px 0 #fff inset,0 1px 0 rgba(0,0,0,.1);
 }
 
-.pn,.pnc,.u-button{
+.pn,.pnc,.u-button,button{
     &:extend(.u-btn-blue);
     height:auto;
     line-height:inherit;
