--- a/css/ui/text.less
+++ b/css/ui/text.less
@@ -4,6 +4,7 @@
 	line-height:inherit;
 	height:auto;
 
+    appearance:none;
 	border: 1px solid #ddd;
     box-shadow: 0 0 1px #ddd inset;
     border-radius: 2px;
