--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -1,7 +1,7 @@
 <!--{subtemplate common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
 <header class="i-header">
-	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i><span>返回</span></a>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"></a>
 	<div class="i-header-title">站点地图</div>
 </header>
 <div class="system-container sitemap-container">
