--- a/template/default/common/css.htm
+++ b/template/default/common/css.htm
@@ -2,4 +2,4 @@
 
 <link rel="stylesheet" href="http://css.jx3pve.com/css/global.css" type="text/css" />
 
-<link rel="stylesheet" href="http://css.jx3pve.com/css/common.css" type="text/css" />
+<link rel="stylesheet" href="http://test.jx3pve.com/css/common.css" type="text/css" />
