--- a/template/default/forum/发布页/post_editor_extra.htm
+++ b/template/default/forum/发布页/post_editor_extra.htm
@@ -4,22 +4,25 @@
 		<!--{if $sortid}-->
 			<input type="hidden" name="sortid" value="$sortid" />
 		<!--{/if}-->
-		<!--{if $isfirstpost && !empty($_G['forum'][threadtypes][types])}-->
-			<div class="c-post-category ftid">
-				<!--{if $_G['forum']['ismoderator'] || empty($_G['forum']['threadtypes']['moderators'][$thread[typeid]])}-->
-				<select name="typeid" id="typeid" width="80">
-				<option value="0">{lang select_thread_catgory}</option>
-				<!--{loop $_G['forum'][threadtypes][types] $typeid $name}-->
-					<!--{if empty($_G['forum']['threadtypes']['moderators'][$typeid]) || $_G['forum']['ismoderator']}-->
-					<option value="$typeid"{if $thread['typeid'] == $typeid || $_GET['typeid'] == $typeid} selected="selected"{/if}><!--{echo strip_tags($name);}--></option>
-					<!--{/if}-->
-				<!--{/loop}-->
-				</select>
-				<!--{else}-->
-				[<!--{echo strip_tags($_G['forum']['threadtypes']['types'][$thread[typeid]]);}-->]
+		<div class="c-post-category ftid">
+			<span class="c-post-category-bg">标题</span>
+			<span class="c-post-category-ct">
+				<!--{if $isfirstpost && !empty($_G['forum'][threadtypes][types])}-->
+						<!--{if $_G['forum']['ismoderator'] || empty($_G['forum']['threadtypes']['moderators'][$thread[typeid]])}-->
+						<select name="typeid" id="typeid" width="80">
+						<option value="0">{lang select_thread_catgory}</option>
+						<!--{loop $_G['forum'][threadtypes][types] $typeid $name}-->
+							<!--{if empty($_G['forum']['threadtypes']['moderators'][$typeid]) || $_G['forum']['ismoderator']}-->
+							<option value="$typeid"{if $thread['typeid'] == $typeid || $_GET['typeid'] == $typeid} selected="selected"{/if}><!--{echo strip_tags($name);}--></option>
+							<!--{/if}-->
+						<!--{/loop}-->
+						</select>
+						<!--{else}-->
+						[<!--{echo strip_tags($_G['forum']['threadtypes']['types'][$thread[typeid]]);}-->]
+						<!--{/if}-->
 				<!--{/if}-->
-			</div>
-		<!--{/if}-->
+			</span>
+		</div>
 		<div class="c-post-subject z">
 			<!--{if $_GET[action] == 'reply' && !empty($_GET['addtrade']) || $_GET[action] == 'edit' && $thread['special'] == 2 && !$postinfo['first']}-->
 				<input name="subject" type="hidden" value="" />
