当没有翻页时隐藏跳楼功能

--- a/template/default/widget/w_pages_bottom_view.htm
+++ b/template/default/widget/w_pages_bottom_view.htm
@@ -10,6 +10,7 @@
 	</div>
 <!--{/if}-->
 
+<!--{if $multipage}-->
 <div class="w-pages w-pages-bottom pgs">
 	<div class="w-pages-list pgt">$multipage</div>
 	<div class="w-gotofloor" id="w-gotofloor">
@@ -20,3 +21,4 @@
 		</div>
 	</div>
 </div>
+<!--{/if}-->
