列表页页返回栏目导航
Signed-off-by: unknown <17229398@qq.com>

--- a/template/default/forum/列表页/forumdisplay_header.htm
+++ b/template/default/forum/列表页/forumdisplay_header.htm
@@ -1,5 +1,5 @@
 <header class="i-header i-header-list">
-	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i><span>返回</span></a>
+	<a class="i-header-back" href="./sitemap"><i></i><span></span></a>
 	<div class="i-header-title">$_G['forum'][name]</div>
 	<div class="i-header-menu">
 		<!-- 发布帖子 -->
